--- a/scss/main.scss
+++ b/scss/main.scss
@@ -141,6 +141,10 @@ main {
   }
 }
 
+.attribution {
+  color: col('white-txt');
+}
+
 @mixin theme($light-theme: true) {
   @if $light-theme {
     main {
@@ -197,6 +201,15 @@ main {
         .second-portion {
           @extend .first-portion;
         }
+      }
+    }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+      color: col('very-dark-blue-txt');
+
+      a {
+        color: hsl(228, 45%, 44%);
       }
     }
   }
